--- a/Backend/src/main/resources/application.yml
+++ b/Backend/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   jackson:
     default-property-inclusion: non_null
+    mapper:
+      accept-case-insensitive-enums: true
   datasource:
     url: jdbc:h2:file:./data/test
     driver-class-name: org.h2.Driver
